--- a/index.html
+++ b/index.html
@@ -9,6 +9,41 @@
   </head>
   <body>
     <!-- TODO: add form here -->
+    <h1>Rocket Simulation</h1>
+    <form method="post" action="https://handlers.education.launchcode.org/request-parrot">
+      <label>Test Name &nbsp;
+        <input type="text" name="testName" />
+      </label>
+      <label>Test Date &nbsp;
+        <input type="date" name="testDate" />
+      </label>
+      <label>Rocket Type &nbsp;
+        <select name="rocketType">
+          <option value="Lynx">Lynx</option>
+          <option value="pslv-1">PSLV-1</option>
+          <option value="pslv-2">PSLV-2</option>
+          <option value="pslv-3">PSLV-3</option>
+        </select>
+      </label>
+      <label>Number of Rocket Boosters &nbsp;
+        <input type="num" name="boosterCount" />
+      </label>
+      <p>Wind Rating:</p>
+      <label>No Wind&nbsp;
+        <input type="radio" name="windRating" value=0 />
+      </label>
+      <label>Mild &nbsp;
+        <input type="radio" name="windRating" value=10 />
+      </label>
+      <label>Strong &nbsp;
+        <input type="radio" name="windRating" value=20 />
+      </label>
+      <label>Use production grade servers &nbsp;
+        <input type="checkbox" name="productionServers" />
+      </label>
+      <button>Run Simulation</button>
+
+    </form>
     
 
     <p>WARNING: This ONLY works in <b>replit</b> if this "result" page is opened in its own window. Click the icon that shows a box with an arrow coming out of it.
