--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </select>
       </label>
       <label>Number of Rocket Boosters &nbsp;
-        <input type="num" name="boosterCount" />
+        <input type="number" name="boosterCount" />
       </label>
       <p>Wind Rating:</p>
       <label>No Wind&nbsp;
